fix(arch wiki): dark mode support
now supports dark mode!!

--- a/styles/archwiki/Catppuccin.user.css
+++ b/styles/archwiki/Catppuccin.user.css
@@ -1,11 +1,11 @@
 /* ==UserStyle==
 @name Arch Wiki Catppuccin
-@namespace github.com/catppuccin/userstyles/styles/ArchWiki
-@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/ArchWiki
-@version 0.0.1
-@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/ArchWiki/catppuccin.user.css
-@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3AArchWiki
-@description Soothing pastel theme for Arch WIki
+@namespace github.com/catppuccin/userstyles/styles/archwiki
+@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/archwiki
+@version 0.0.2
+@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/archwiki/catppuccin.user.css
+@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Aarchwiki
+@description Soothing pastel theme for Arch Wiki
 @author Catppuccin
 @license MIT
 
@@ -189,9 +189,28 @@
   color: @blue !important;
 }
     
+    @media screen {
+    html.client-darkmode {
+        background-color: @base
+    }
+}
+    
+    .vector-feature-zebra-design-disabled, .body {
+        background-color: @base
+    }
+
+    
     .archwiki-template-box-tip {
         background-color: @green !important;
         color: @text;
+    }
+    
+    .mw-headline {
+        color: @text;
+    }
+    
+    .cdx-button:enabled.cdx-button--weight-quiet, .cdx-button.cdx-button--fake-button--enabled.cdx-button--weight-quiet {
+        background-color: @surface0
     }
     
     #archnavbar ul li.anb-selected a {
@@ -246,6 +265,15 @@
         color: @text;
     }
     
+    .vector-main-menu, .vector-pinnable-element{
+        background-color: @base !important;
+    }
+    
+    #p-navigation ul li a {
+        color: @blue !important;
+        
+    }
+    
     .archwiki-template-box-note {
         background-color: @lavender !important;
         border-color: @sapphire !important;
@@ -272,16 +300,32 @@
             color: @text;
     }
     
+    .cdx-button:enabled, .cdx-button.cdx-button--fake-button--enabled {
+color: @text;
+    }
+    
     .anb-home {
         color: @text !important;
     }
-}
-
-    :root[client-darkmode] {
-        #catppuccin(@darkFlavor, @accentColor);
+    
+ .mw-page-container {
+        background-color: @base !important;
     }
+    
+    .mw-headline::before {
+        color: @accent-color !important;
+    }
+    
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+      #catppuccin(@darkFlavor, @accentColor);
+    }
+  }
+   @media (prefers-color-scheme: light) {
     :root {
         #catppuccin(@lightFlavor, @accentColor);
     }
+}
 }
 // vim:ft=less
